cmake_minimum_required(VERSION 4.1)
project(Programacion_Estructurada)

set(CMAKE_CXX_STANDARD 20)

# Agrega cada subdirectorio como un subproyecto
add_subdirectory(Trabajo_practicos/1-Entrada_Salida)
add_subdirectory(Trabajo_practicos/2-Expresiones)
add_subdirectory(Trabajo_practicos/3-Estructuras_Condicionales)
add_subdirectory(Trabajo_practicos/4-Ciclos_o_Bucles)
add_subdirectory(Trabajo_practicos/5-Arreglos)
add_subdirectory(Trabajo_practicos/6-Matrices)
add_subdirectory(Trabajo_practicos/7-Cadenas)