cmake_minimum_required(VERSION 4.1)
project(Programacion_Estructurada)

set(CMAKE_CXX_STANDARD 20)

# Agrega cada subdirectorio como un subproyecto
add_subdirectory(Trabajo_practico_1/1-Entrada_Salida)
add_subdirectory(Trabajo_practico_1/2-Expresiones)
add_subdirectory(Trabajo_practico_1/3-Estructuras_Condicionales)
add_subdirectory(Trabajo_practico_1/4-Ciclos_o_Bucles)
add_subdirectory(Trabajo_practico_2/5-Arreglos)
add_subdirectory(Trabajo_practico_2/6-Matrices)
add_subdirectory(Trabajo_practico_2/7-Cadenas)
add_subdirectory(Trabajo_practico_2/8-Ordenamiento)
add_subdirectory(Trabajo_practico_2/9-Busqueda)
add_subdirectory(Trabajo_practico_2/10-Estructuras)
add_subdirectory(Ejercicio_En_Clase)
