cmake_minimum_required(VERSION 4.1)
project(Programacion_Estructurada)

set(CMAKE_CXX_STANDARD 20)

add_executable(7-Ejercicio_1 Ejercicio_1.cpp)
add_executable(7-Ejercicio_2 Ejercicio_2.cpp)
add_executable(7-Ejercicio_3 Ejercicio_3.cpp)
add_executable(7-Ejercicio_4 Ejercicio_4.cpp)
add_executable(7-Ejercicio_5 Ejercicio_5.cpp)
add_executable(7-Ejercicio_6 Ejercicio_6.cpp)
add_executable(7-Ejercicio_7 Ejercicio_7.cpp)
add_executable(7-Ejercicio_8 Ejercicio_8.cpp)
add_executable(7-Ejercicio_9 Ejercicio_9.cpp)