cmake_minimum_required(VERSION 4.1)
project(Programacion_Estructurada)

set(CMAKE_CXX_STANDARD 20)

add_executable(7-Ejercicio_1 Ejercicio_1.cpp)
add_executable(7-Ejercicio_3 Ejercicio_3.cpp)
add_executable(7-Ejercicio_5 Ejercicio_5.cpp)
add_executable(7-Ejercicio_7 Ejercicio_7.cpp)
add_executable(7-Ejercicio_9 Ejercicio_9.cpp)
add_executable(7-Ejercicio_11 Ejercicio_11.cpp)
add_executable(7-Ejercicio_13 Ejercicio_13.cpp)
add_executable(7-Ejercicio_15 Ejercicio_15.cpp)
add_executable(7-Ejercicio_17 Ejercicio_17.cpp)
add_executable(7-Ejercicio_19 Ejercicio_19.cpp)